# 2026_Hikorobo_Lidar

./: .gitignore  build.sh  cleanup_lidar.sh  debug_launch.sh  readme.md  setup.md  start.sh  start_acquisition.sh
.dev/: Coding_Rules.md  plan.md
.github/: copilot-instructions.md
config/: background_diff_node.yml  clustering_node.yml  livox_node.yml  preprocess_node.yml
documents/: bulid.md  flie_struct.md  setup.md
lidar_background_diff/: CMakeLists.txt  package.xml
lidar_background_diff/include/lidar_background_diff/: background_diff_node.hpp  ror_filter.hpp
lidar_background_diff/src/: background_diff_node.cpp  main.cpp  ror_filter.cpp
lidar_bringup/: CMakeLists.txt  package.xml
lidar_bringup/launch/: lidar_system.launch.py
lidar_clustering/: CMakeLists.txt  package.xml
lidar_clustering/include/lidar_clustering/: clustering_node.hpp
lidar_clustering/src/: clustering_node.cpp  main.cpp
lidar_get_cloud_points/: CMakeLists.txt  package.xml
lidar_get_cloud_points/src/: lidar_get_cloud_points_component.cpp
lidar_get_points/: CMakeLists.txt  package.xml
lidar_get_points/include/lidar_get_points/: livox_node.hpp
lidar_get_points/launch/: livox.launch.py
lidar_get_points/src/: livox_node.cpp  main.cpp
lidar_preprocess/: CMakeLists.txt  lidar_preprocess_config.yaml  package.xml
lidar_preprocess/include/lidar_preprocess/: passthrough_filter.hpp  preprocess_node.hpp  roi_filter.hpp  sor_filter.hpp  statistical_outlier_removal_filter.hpp  voxel_filter.hpp  voxel_grid_filter.hpp
lidar_preprocess/src/: lidar_preprocess_component.cpp  main.cpp  passthrough_filter.cpp  preprocess_node.cpp  roi_filter.cpp  sor_filter.cpp  statistical_outlier_removal_filter.cpp  voxel_filter.cpp  voxel_grid_filter.cpp
test/: test_integration_quick.sh  test_integration_time.sh  test_integration_with_launch.sh
